style: fix responsive hljs font-size on mobile

--- a/assets/styles/components/_highlightjs.scss
+++ b/assets/styles/components/_highlightjs.scss
@@ -34,7 +34,7 @@ pre {
 	font-weight: bold;
 	// white-space: pre-wrap;
 
-	@media (max-width: 768px) {
+	@media screen and (max-width: 768px) {
 		font-size: 12px;
 	}
 
